name:               mmn80-github-io
version:            0.1.0.0
homepage:           https://github.com/mmn80/mmn80.github.io.src
author:             Călin Ardelean
maintainer:         Călin Ardelean <mmn80cpu@gmail.com>
copyright:          Copyright (c) 2016 Călin Ardelean
license:            BSD3
stability:          experimental
build-type:         Simple
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: https://github.com/mmn80/mmn80.github.io.src.git

executable site
  main-is:          Main.hs
  other-modules:    SvgParser
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , pandoc
                  , pandoc-types
                  , parsec
  ghc-options:      -threaded
  default-language: Haskell2010
